--- a/facecheck-frontend/public/index.html
+++ b/facecheck-frontend/public/index.html
@@ -28,6 +28,11 @@
       href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100&family=Kalnia:wght@500&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100&family=Kalnia:wght@500&family=Nanum+Myeongjo:wght@700&family=Noto+Serif+KR:wght@500&display=swap"
+      rel="stylesheet"
+    />
+
     <title>React App</title>
   </head>
   <body>
